--- a/nape-hacks/1.0.0/build.xml
+++ b/nape-hacks/1.0.0/build.xml
@@ -2,7 +2,7 @@
 <project name="nape-hacks-deploy" default="maven-deploy" basedir=".">
 
     <property name="ooo-build.vers" value="2.10"/>
-    <ant antfile="../etc/bootstrap.xml"/>
+    <ant antfile="../../etc/bootstrap.xml"/>
     <import file="${user.home}/.m2/ooo-build/${ooo-build.vers}/ooo-build.xml"/>
 
     <property name="deploy.dir" value="dist"/>
