--- a/appodeal-support-lib/23.1.2/build.xml
+++ b/appodeal-support-lib/23.1.2/build.xml
@@ -10,7 +10,7 @@
     <!-- Set maven.deploy.repo to deploy to a local maven repo:
             ant -Dmaven.deploy.repo=file:///path/to/local/repo maven-deploy -->
     <target name="maven-deploy" depends="prepare">
-        <mavendeploy file="${deploy.dir}/appodeal-play-services.ane" pom="pom.xml"/>
+        <mavendeploy file="${deploy.dir}/appodeal-support-lib.ane" pom="pom.xml"/>
     </target>
 
     <target name="prepare" depends="-init-ooo">
