--- a/escape-builder/ant/0.9.0/pom.xml
+++ b/escape-builder/ant/0.9.0/pom.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.domwires</groupId>
-  <artifactId>builder</artifactId>
+  <groupId>com.crazyflasher.escape</groupId>
+  <artifactId>escape-builder</artifactId>
   <packaging>xml</packaging>
   <version>0.9.0</version>
   <repositories>
@@ -11,12 +11,4 @@
       <url>https://raw.github.com/CrazyFlasher/maven-repo/master</url>
     </repository>
   </repositories>
-  <dependencies>
-    <dependency>
-      <groupId>com.crazyfm.tools</groupId>
-      <artifactId>flashDep</artifactId>
-      <version>0.1.0</version>
-      <type>jar</type>
-    </dependency>
-  </dependencies>
 </project>
