--- a/escape-builder/ant/0.9.0-SNAPSHOT/pom.xml
+++ b/escape-builder/ant/0.9.0-SNAPSHOT/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.crazyflasher.escape</groupId>
   <artifactId>escape-builder</artifactId>
   <packaging>xml</packaging>
-  <version>0.9.0</version>
+  <version>0.9.0-SNAPSHOT</version>
   <repositories>
     <repository>
       <id>CrazyFlasher</id>
