--- a/tools/commGen/0.1.1-SNAPSHOT/pom.xml
+++ b/tools/commGen/0.1.1-SNAPSHOT/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.crazyfm.tools</groupId>
   <artifactId>commGen</artifactId>
   <packaging>jar</packaging>
-  <version>0.1.0</version>
+  <version>0.1.1-SNAPSHOT</version>
   <repositories>
     <repository>
       <id>CrazyFlasher</id>
