--- a/distriqt/core/1.0.0/build.xml
+++ b/distriqt/core/1.0.0/build.xml
@@ -10,7 +10,7 @@
     <!-- Set maven.deploy.repo to deploy to a local maven repo:
             ant -Dmaven.deploy.repo=file:///path/to/local/repo maven-deploy -->
     <target name="maven-deploy" depends="prepare">
-        <mavendeploy file="${deploy.dir}/com.distriqt.Core" pom="pom.xml"/>
+        <mavendeploy file="${deploy.dir}/com.distriqt.Core.ane" pom="pom.xml"/>
     </target>
 
     <target name="prepare" depends="-init-ooo">
